tsmux: Don't write HDMV descriptor for H264 files

This is only for Blu-Rays, and we don't produce them.

See also https://gitlab.freedesktop.org/gstreamer/gst-plugins-bad/-/issues/1343

Part-of: <https://gitlab.freedesktop.org/gstreamer/gstreamer/-/merge_requests/11346>